5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1573_2897.log
== SUBMITION (2019-03-27 15:59:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.140249
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)
                                                ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:59:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite um inteiro positivo)
                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:59:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.203385
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)
                                                ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:59:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite um inteiro positivo))
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:59:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.182816
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo))
                                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:59:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:59:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.138714
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:00:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.242374
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.179552
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.16555
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:00:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite numero inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite numero inteiro positivo)))
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite numero inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.262234
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite numero inteiro positivo)))
                                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:00:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.115898
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:00:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo)))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.119363
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int((input("Digite um inteiro positivo)))
                                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:01:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo")))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:01:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("Digite um inteiro positivo")))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.197412
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
